--- a/index.html
+++ b/index.html
@@ -482,11 +482,11 @@ X. Min, G. Zhai, K. Gu, Y. Fang, X. Yang, X. Wu, J. Zhou, and X. Liu, <i>IEEE IC
 <h2>Contact</h2>
 <p>Office: #5-100 SEIEE Building, Shanghai Jiao Tong University<br />
 Mail: #5-100 SEIEE Building, 800 Dong Chuan Rd, Shanghai 200240, China<br />
-Web: XXXXXX<br />
+Web: <a href="https://minxiongkuo.github.io/">https://minxiongkuo.github.io/</a><br />
 Email: minxiongkuo@sjtu.edu.cn OR minxiongkuo@gmail.com<br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-10 15:38:46 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-10 15:53:38 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
