--- a/award.html
+++ b/award.html
@@ -27,6 +27,8 @@
 <h1>Xiongkuo Min &ndash; Award &amp; Honor</h1>
 </div>
 <ul>
+<li><p>2023, The Winner Prize of the IEEE ICIP Point Cloud Visual Quality Assessment Grand Challenge</p>
+</li>
 <li><p>2023, IEEE MSA-TC (The Multimedia System and Applications Technical Committee) Best Paper Award - Honorable Mention</p>
 </li>
 <li><p>2023, Best Bachelor Thesis Supervision of Shanghai Jiao Tong University (Top 1%)
@@ -70,7 +72,7 @@
 <p><tt>[<a href="award_cn.html">中文页面</a>]</tt></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-10 15:39:07 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-20 18:40:30 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
