--- a/award_cn.html
+++ b/award_cn.html
@@ -27,6 +27,8 @@
 <h1>Xiongkuo Min &ndash; Award &amp; Honor</h1>
 </div>
 <ul>
+<li><p>2023，IEEE ICIP点云视觉质量评价挑战赛冠军</p>
+</li>
 <li><p>2023，IEEE MSA-TC最佳论文提名奖</p>
 </li>
 <li><p>2023，上海交通大学优异学士学位论文（Top 1%）指导教师</p>
@@ -41,7 +43,7 @@
 </li>
 <li><p>2022，IEEE BMSB最佳论文奖</p>
 </li>
-<li><p>2022，IEEE ICIP 监控视频质量评价挑战赛</p>
+<li><p>2022，IEEE ICIP 监控视频质量评价挑战赛冠军</p>
 </li>
 <li><p>2021，IEEE Transactions on Multimedia最佳论文提名奖（2/772）</p>
 </li>
@@ -69,7 +71,7 @@
 <p><tt>[<a href="award.html">English Page</a>]</tt></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-10 15:39:11 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-20 18:40:35 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
