--- a/biography.html
+++ b/biography.html
@@ -28,8 +28,8 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="images/XiongkuoMin_full.jpg" alt="photo" width="250px" height="330px" />&nbsp;</td>
-<td align="left"><p>Xiongkuo Min received the B.E. degree from Wuhan University, Wuhan, China, in 2013, and the Ph.D. degree from Shanghai Jiao Tong University, Shanghai, China, in 2018, where he is currently a tenure-track Associate Professor with the Institute of Image Communication and Network Engineering. From Jun. 2018 to Sept. 2021, he was a Postdoc at Shanghai Jiao Tong University. From Jan. 2016 to Jan. 2017, he was a visiting student at University of Waterloo. From Jan. 2019 to Jan. 2021, he was a visiting scholar at The University of Texas at Austin and the University of Macau. He received the Best Paper Runner-up Award of IEEE Transactions on Multimedia in 2021, the Best Student Paper Award of IEEE International Conference on Multimedia and Expo (ICME) in 2016, the Best Paper Award of IEEE International Symposium on Broadband Multimedia Systems and Broadcasting (BMSB) in 2022, and  first place awards of several grand challenges held at IEEE ICME and ICIP. His research interests include image/video/audio quality, quality of experience, multimedia, image/video processing, computer vision.</p>
-<p>中文简介：闵雄阔，上海交通大学电子工程系长聘教轨副教授。2013年本科毕业于武汉大学，2018年博士毕业于上海交通大学，2018至2021年在上海交通大学做博士后，2021年至今于上海交通大学图像通信与网络工程研究所工作。研究方向为多媒体信号处理，主持国家自然科学基金面上、青年、博士后基金面上、CAAI-Mindspore学术基金、CCF-腾讯犀牛鸟基金、上海交通大学-华为ExploreX基金等项目；入选博士后创新人才、上海市浦江人才、上海市超博等计划；获中国图象图形学会技术发明一等奖、中国电子学会优博等国内奖励，以及IEEE TMM最佳论文提名奖、IEEE ICME最佳学生论文奖、IEEE BMSB最佳论文奖等国际奖励，多次获IEEE ICME、ICIP等挑战赛冠军；在IEEE/ACM汇刊及CCF A类会议等核心期刊会议上发表论文60余篇，其中5篇入选ESI热点/高被引论文，Google Scholar引用4500余次；获授权发明专利19项；任Displays、Hum.-centric Comput. Inf. Sci.等期刊编委。</p>
+<td align="left"><p>Xiongkuo Min received the B.E. degree from Wuhan University, Wuhan, China, in 2013, and the Ph.D. degree from Shanghai Jiao Tong University, Shanghai, China, in 2018, where he is currently a tenure-track Associate Professor with the Institute of Image Communication and Network Engineering. From Jun. 2018 to Sept. 2021, he was a Postdoc at Shanghai Jiao Tong University. From Jan. 2016 to Jan. 2017, he was a visiting student at University of Waterloo. From Jan. 2019 to Jan. 2021, he was a visiting scholar at The University of Texas at Austin and the University of Macau. He received the Best Paper Runner-up Award of IEEE Transactions on Multimedia in 2021, the Best Student Paper Award of IEEE International Conference on Multimedia and Expo (ICME) in 2016, the Best Paper Award of IEEE International Symposium on Broadband Multimedia Systems and Broadcasting (BMSB) in 2022, and several first place awards of grand challenges held at IEEE ICME and ICIP. His research interests include image/video/audio quality, quality of experience, multimedia, image/video processing, computer vision.</p>
+<p>中文简介：闵雄阔，上海交通大学电子工程系长聘教轨副教授。2013年本科毕业于武汉大学，2018年博士毕业于上海交通大学，2018至2021年在上海交通大学做博士后，2021年至今于上海交通大学图像通信与网络工程研究所工作。研究方向为多媒体信号处理，主持国家自然科学基金面上、青年、博士后基金面上、CAAI-Mindspore学术基金、CCF-腾讯犀牛鸟基金、上海交通大学-华为ExploreX基金等项目；入选博士后创新人才、上海市浦江人才、上海市超博等计划；获中国图象图形学会技术发明一等奖、中国电子学会优博等国内奖励，以及IEEE TMM最佳论文提名奖、IEEE ICME最佳学生论文奖、IEEE BMSB最佳论文奖等国际奖励，多次获IEEE ICME、ICIP等挑战赛冠军；在IEEE/ACM汇刊及CCF A类会议上发表论文60余篇，其中5篇入选ESI热点/高被引论文，Google Scholar引用4800余次；获授权发明专利19项；任Displays、Hum.-centric Comput. Inf. Sci.等期刊编委。</p>
 </td></tr></table>
 <h2>Experience</h2>
 <ul>
@@ -45,7 +45,7 @@ Shanghai Jiao Tong University, Shanghai, China<br />
 <b>Postdoc</b><br />
 Department of Automation<br />
 Shanghai Jiao Tong University, Shanghai, China<br />
-Advised by Prof. <a href="https://scholar.google.com/citations?user=1SNUZGKl9KIC&amp;hl=en&amp;oi=ao">Xinping Guan</a></p>
+Advised by Prof. <a href="https://scholar.google.com/citations?user=1SNUZGKl9KIC&amp;hl=en&amp;oi=ao">Xinping Guan</a> and Prof. <a href="https://scholar.google.com/citations?user=E6zbSYgAAAAJ&amp;hl=en&amp;oi=ao">Guangtao Zhai</a></p>
 </li>
 </ul>
 <ul>
@@ -83,7 +83,7 @@ Wuhan University, Wuhan, China</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-10 15:38:50 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-20 18:34:25 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
