--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@ minxiongkuo@sjtu.edu.cn<br />
 </div></div>
 <h2>News</h2>
 <ul>
-<li><p>07/2023, We receive the IEEE MSA-TC Best Paper Award - Honorable Mention.</p>
+<li><p>10/2023, We receive the Winner Prize of the IEEE ICIP Point Cloud Visual Quality Assessment Grand Challenge</p>
+</li>
+<li><p>07/2023, We receive the IEEE MSA-TC Best Paper Award - Honorable Mention</p>
 </li>
 <li><p>06/2023, Undergraduate from our group wins the Best Bachelor Thesis Award of SJTU (Top 1%)</p>
 </li>
@@ -169,7 +171,7 @@ Xiongkuo Min, Kede Ma, Ke Gu, Guangtao Zhai, Zhou Wang, and Weisi Lin<br />
 </ul>
 <h2>Featured Research</h2>
 <table class="imgtable"><tr><td>
-<img src="images/Survey.png" alt="photo" width="300px" height="180px" />&nbsp;</td>
+<img src="images/Survey.jpg" alt="photo" width="300px" height="180px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Surveys for Perceptual Quality Assessment</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p></p>
 <p>- <b>[SCIS]</b> Perceptual Image Quality Assessment: A Survey<br />
@@ -181,7 +183,7 @@ X. Min, K. Gu, G. Zhai, X. Yang, W. Zhang, P. L. Callet, and C. W. Chen, <i>ACM 
 <br /><font color=red size=+0.00>ESI Highly Cited Paper</font></p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/AIGC.png" alt="photo" width="300px" height="180px" />&nbsp;</td>
+<img src="images/AIGC.jpg" alt="photo" width="300px" height="180px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>AIGC Image Quality Assessment</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE TCSVT]</b> AGIQA-3K: An Open Database for AI-Generated Image Quality Assessment<br />
@@ -191,7 +193,7 @@ C. Li, Z. Zhang, H. Wu, W. Sun, X. Min, X. Liu, G. Zhai, and W. Lin, <i>IEEE TCS
 J. Wang, H. Duan, J. Liu, S. Chen, X. Min, and G. Zhai, <i>CICAI</i>, 2023. [<a href="https://www.terabox.com/sharing/link?surl=DtV-A9XiuQQDvVPXn6rYvg">Database</a>]</p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/Point.png" alt="photo" width="300px" height="130px" />&nbsp;</td>
+<img src="images/Point.jpg" alt="photo" width="300px" height="130px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Point Cloud, Mesh Quality Assessment</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IJCAI]</b> MM-PCQA: Multi-Modal Learning for No-reference Point Cloud Quality Assessment<br />
@@ -201,7 +203,7 @@ Z. Zhang, W. Sun, X. Min, Q. Zhou, J. He, Q. Wang, and G. Zhai, <i>IJCAI</i>, 20
 Z. Zhang, W. Sun, X. Min, T. Wang, W. Lu, and G. Zhai, <i>IEEE TCSVT</i>, vol. 32, no. 11, pp. 7618-7631, 2022. [<a href="https://github.com/zzc-1998/NR-3DQA">Code</a>]</p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/Enhancement.png" alt="photo" width="300px" height="180px" />&nbsp;</td>
+<img src="images/Enhancement.jpg" alt="photo" width="300px" height="180px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Image/Video Enhancement/Restoration/Interpolation etc.</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE CVPR]</b> Blurry Video Frame Interpolation<br />
@@ -223,7 +225,7 @@ K. Zhang, D. Zhu, X. Min, and G. Zhai, <i>IEEE TGRS</i>, vol. 61, pp. 1-12, 2022
 W. Sun, X. Min, G. Zhai, K. Gu, S. Ma, and X. Yang, <i>IEEE TMC</i>, vol. 21, no. 1, pp. 110-124, 2022. [<a href="https://github.com/sunwei925/DBSVideoDatabase">Database</a>]</p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/UGC.png" alt="photo" width="300px" height="250px" />&nbsp;</td>
+<img src="images/UGC.jpg" alt="photo" width="300px" height="250px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Image Quality Assessment in-the-Wild</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE JSTSP]</b> Blind Quality Assessment for in-the-Wild Images via Hierarchical Feature Fusion and Iterative Mixed Database Training<br />
@@ -239,7 +241,7 @@ K. Zhang, D. Zhu, X. Min, Z. Gao, and G. Zhai, <i>IEEE TCSVT</i>, 2023.</p>
 W. Zhang, D. Li, X. Min, G. Zhai, G. Guo, X. Yang, and K. Ma, <i>NeurIPS</i>, 2022, vol. 35, pp. 2916-2929. [<a href="https://github.com/zwx8981/PerceptualAttack_BIQA">Code</a>]</p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/UGCvideo.png" alt="photo" width="300px" height="150px" />&nbsp;</td>
+<img src="images/UGCvideo.jpg" alt="photo" width="300px" height="150px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Video Quality Assessment in-the-Wild</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[ACM MM]</b> A Deep Learning based No-reference Quality Assessment Model for UGC Videos<br />
@@ -253,7 +255,7 @@ W. Sun, T. Wang, X. Min, F. Yi, and G. Zhai, <i>IEEE ICMEW</i>, 2021, pp. 1-6. [
 <br /><font color=red size=+0.00>First Place Award of IEEE ICME 2021 Grand Challenge on Quality Assessment of Compressed UGC Videos</font></p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/OSD.png" alt="photo" width="300px" height="150px" />&nbsp;</td>
+<img src="images/OSD.jpg" alt="photo" width="300px" height="150px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Blind IQA with Opinion Score Distributions</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[ACM MM]</b> Image Quality Assessment: From Mean Opinion Score to Opinion Score Distribution<br />
@@ -266,7 +268,7 @@ Y. Gao, X. Min, Y. Zhu, X.-P. Zhang, and G. Zhai, <i>IEEE TCSVT</i>, 2023. [<a h
 Y. Gao, X. Min, W. Zhu, X.-P. Zhang, and G. Zhai, <i>IEEE TCSVT</i>, vol. 33, no. 6, pp. 2656-2671, 2023. [<a href="https://github.com/YixuanGao98/Image-Quality-Score-Distribution-Prediction-via-Alpha-Stable-Model">Database &amp; Code</a>]</p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/Gaze.png" alt="photo" width="300px" height="180px" />&nbsp;</td>
+<img src="images/Gaze.jpg" alt="photo" width="300px" height="180px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Human Gaze and Human-Object Interaction Detection</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE CVPR]</b> End-to-End Human-Gaze-Target Detection with Transformers<br />
@@ -282,7 +284,7 @@ D. Tu, W. Sun, X. Min, G. Zhai, and W. Shen, <i>NeurIPS</i>, 2022, vol. 35, pp. 
 D. Tu, X. Min, H. Duan, G. Guo, G. Zhai, and W. Shen, <i>ECCV</i>, 2022, pp. 87-103.</p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/Hiding.png" alt="photo" width="300px" height="150px" />&nbsp;</td>
+<img src="images/Hiding.jpg" alt="photo" width="300px" height="150px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Information Hiding</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE CVPR]</b> Learning Invisible Markers for Hidden Codes in Offline-to-online Photography<br />
@@ -295,7 +297,7 @@ J. Jia, Z. Gao, K. Chen, M. Hu, X. Min, G. Zhai, and X. Yang, <i>IEEE TCYB</i>, 
 J. Jia, Z. Gao, D. Zhu, X. Min, M. Hu, and G. Zhai, <i>IEEE TMM</i>, vol. 25, pp. 7607-7620, 2023.</p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/Specific.png" alt="photo" width="300px" height="280px" />&nbsp;</td>
+<img src="images/Specific.jpg" alt="photo" width="300px" height="280px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Quality Assessment for Specific Applications</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE TIP]</b> A Metric for Light Field Reconstruction, Compression, and Display Quality Evaluation<br />
@@ -318,7 +320,7 @@ Z. Zhang, W. Lu, W. Sun, X. Min, T. Wang, and G. Zhai, <i>IEEE ICIP</i>, 2022, p
 <br /><font color=red size=+0.00>The First Prize of the IEEE ICIP Grand Challenge - Video Distortion Detection and Classification in the Context of Video Surveillance</font></p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/VRsaliency.png" alt="photo" width="300px" height="250px" />&nbsp;</td>
+<img src="images/VRsaliency.jpg" alt="photo" width="300px" height="250px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Visual Attention Prediction in Virtual Reality </b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[ACM TOMM]</b> Learning a Deep Agent to Predict Head Movement in 360-Degree Images<br />
@@ -339,7 +341,7 @@ Y. Zhu, G. Zhai, Y. Yang, H. Duan, X. Min, and X. Yang, <i>IEEE TCSVT</i>, vol. 
 D. Zhu, K. Zhang, N. Zhang, Q. Zhou, X. Min, G. Zhai, and X. Yang, <i>IEEE TMM</i>, 2023.</p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/VRquality.png" alt="photo" width="300px" height="200px" />&nbsp;</td>
+<img src="images/VRquality.jpg" alt="photo" width="300px" height="200px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Quality Assessment and Transmission in Virtual Reality </b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE JSTSP]</b> MC360IQA: The Multi-Channel CNN for Blind 360-Degree Image Quality Assessment<br />
@@ -357,7 +359,7 @@ H. Duan, X. Min, W. Sun, Y. Zhu, X.-P. Zhang, and G. Zhai, <i>IEEE JSTSP</i>, 20
 L. Teng, G. Zhai, Y. Wu, X. Min, W. Zhang, Z. Ding, and C. Xiao, <i>IEEE TWC</i>, vol. 21, no. 1, pp. 18-33, 2022.</p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/AR.png" alt="photo" width="300px" height="160px" />&nbsp;</td>
+<img src="images/AR.jpg" alt="photo" width="300px" height="160px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Attention and Experience Prediction in Augmented Reality </b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[ACM MM]</b> Saliency in Augmented Reality<br />
@@ -374,7 +376,7 @@ H. Duan, L. Guo, W. Sun, X. Min, L. Chen, and G. Zhai, <i>IEEE BMSB</i>, 2022, p
 <br /><font color=red size=+0.00>Best Paper Award</font></p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/AVQA.png" alt="photo" width="300px" height="180px" />&nbsp;</td>
+<img src="images/AVQA.jpg" alt="photo" width="300px" height="180px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Audio-Visual Quality Assessment</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE TIP]</b> Study of Subjective and Objective Quality Assessment of Audio-Visual Signals<br />
@@ -388,7 +390,7 @@ Y. Cao, X. Min, W. Sun, and G. Zhai, <i>IEEE TIP</i>, vol. 32, pp. 1882-1896, 20
 Y. Cao, X. Min, W. Sun, and G. Zhai, <i>IEEE TIP</i>, 2023.</p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/Dehaze.png" alt="photo" width="300px" height="280px" />&nbsp;</td>
+<img src="images/Dehaze.jpg" alt="photo" width="300px" height="280px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Quality Assessment for Enhancement (Haze, Light, Stability, etc.)</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE TMM]</b> Quality Evaluation of Image Dehazing Methods Using Synthetic Hazy Images<br />
@@ -415,7 +417,7 @@ Y. Gao, Y. Cao, T. Kou, W. Sun, Y. Dong, X. Liu, X. Min, and G. Zhai, <i>IEEE/CV
 [<a href="https://github.com/YixuanGao98/VDPVE">Database</a>]</p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/Screen.png" alt="photo" width="300px" height="250px" />&nbsp;</td>
+<img src="images/Screen.jpg" alt="photo" width="300px" height="250px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Screen Content Quality Assessment</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[ACM CSUR]</b> Screen Content Quality Assessment: Overview, Benchmark, and Beyond<br />
@@ -442,7 +444,7 @@ K. Gu, L. Li, H. Lu, X. Min, and W. Lin, <i>IEEE TIE</i>, vol. 64, no. 5, pp. 39
 X. Min, K. Gu, G. Zhai, M. Hu, and X. Yang, <i>SP</i>, vol. 145, pp. 127-136, 2018. [<a href="https://drive.google.com/open?id=1Kzrq3tBAQJF-lPDLaO7a2-noS86eDYuo">Code</a>]</p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/MMS.png" alt="photo" width="300px" height="250px" />&nbsp;</td>
+<img src="images/MMS.jpg" alt="photo" width="300px" height="250px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Multimodal (Audio, Visual, Text, etc.) Saliency Prediction</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE TIP]</b> A Multimodal Saliency Model for Videos With High Audio-Visual Correspondence<br />
@@ -465,7 +467,7 @@ Y. Sun, X. Min, H. Duan, and G. Zhai, IEEE ISCAS/, 2023, pp.1-5.
 <br /><font color=red size=+0.00>IEEE MSA-TC Best Paper Award - Honorable Mention</font></p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/PRI.png" alt="photo" width="300px" height="156px" />&nbsp;</td>
+<img src="images/PRI.jpg" alt="photo" width="300px" height="156px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>BIQA Based on Pseudo References</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE TMM]</b> Blind Quality Assessment Based on Pseudo Reference Image<br />
@@ -486,7 +488,7 @@ Web: <a href="https://minxiongkuo.github.io/">https://minxiongkuo.github.io/</a>
 Email: minxiongkuo@sjtu.edu.cn OR minxiongkuo@gmail.com<br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-10 15:53:38 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-20 19:11:27 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
