--- a/patent.html
+++ b/patent.html
@@ -28,7 +28,7 @@
 </div>
 <h2>Granted Chinese Patent </h2>
 <ol>
-<li><p>Guangtao Zhai, Sijin Wu, Huiyu Duan, <b>Xiongkuo Min</b>, Yixuan Gao, Yuqin Cao, &ldquo;Deep Learning-Based Image Enhancement Methods, Equipment and Medium for Visual Impairment Assistance&rdquo;, Chinese Invention Patent, ZL202110829947.3.</p>
+<li><p>Guangtao Zhai, Sijin Wu, Huiyu Duan, <b>Xiongkuo Min</b>, Yixuan Gao, Yuqin Cao, &ldquo;Deep Learning-Based Image Enhancement Methods, Equipment and Medium for Visual Impairment Assistance&rdquo;, Chinese Invention Patent, ZL202110829947.3, 2023-10-27.</p>
 </li>
 <li><p><b>Xiongkuo Min</b>, Guangtao Zhai, Xiaokang Yang, &ldquo;A Full Reference Audio Quality Assessment Method and Device&rdquo;, Chinese Invention Patent, ZL202010171569.X, 2023-05-23.</p>
 </li>
@@ -68,7 +68,7 @@
 <p><tt>[<a href="patent_cn.html">中文页面</a>]</tt></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-10 15:39:38 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-20 18:43:22 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
