--- a/patent_cn.html
+++ b/patent_cn.html
@@ -28,7 +28,7 @@
 </div>
 <h2>授权中国专利</h2>
 <ol>
-<li><p>翟广涛，吴思婧，段慧煜，<b>闵雄阔</b>，高艺璇，曹于勤，“基于深度学习的视障辅助的图像增强方法、设备和介质”，中国发明专利，专利号：ZL202110829947.3</p>
+<li><p>翟广涛，吴思婧，段慧煜，<b>闵雄阔</b>，高艺璇，曹于勤，“基于深度学习的视障辅助的图像增强方法、设备和介质”，中国发明专利，专利号：ZL202110829947.3，授权时间：2023-10-27</p>
 </li>
 <li><p><b>闵雄阔</b>，翟广涛，杨小康，“一种全参考音频质量评价方法及装置”，中国发明专利，专利号：ZL202010171569.X，授权时间：2023-05-23</p>
 </li>
@@ -68,7 +68,7 @@
 <p><tt>[<a href="patent.html">English Page</a>]</tt></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-10 15:39:42 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-20 18:43:17 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
