--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@ Department of Electronic Engineering<br />
 Shanghai Jiao Tong University, Shanghai, China<br />
 minxiongkuo@sjtu.edu.cn<br />
 
+<a href="https://scholar.google.com/citations?user=91sjuWIAAAAJ&amp;hl=en">Google Scholar</a><br />
 
-<a href="https://www.researchgate.net/profile/Xiongkuo-Min-2">ResearchGate</a><br />
-<a href="https://dblp.org/pid/139/6983.html">DBLP</a><br />
-<a href="https://multimedia.sjtu.edu.cn/">SJTU Multimedia Lab</a></p>
+
+
+<a href="https://ee.sjtu.edu.cn/FacultyDetail.aspx?id=213&amp;infoid=66&amp;flag=66">中文主页</a></p>
 </td></tr></table>
 <h2>About me</h2>
 <p>I'm currently an Associate Professor (tenure-track) with the Institute of Image Communication and Network Engineering, Department of Electronic Engineering, Shanghai Jiao Tong University, where I joined in Oct. 2021.</p>
@@ -488,7 +489,7 @@ Web: <a href="https://minxiongkuo.github.io/">https://minxiongkuo.github.io/</a>
 Email: minxiongkuo@sjtu.edu.cn OR minxiongkuo@gmail.com<br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-20 19:11:27 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-01-04 15:39:49 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
