--- a/activity.html
+++ b/activity.html
@@ -26,13 +26,25 @@
 <div id="toptitle">
 <h1>Xiongkuo Min &ndash; Activity &amp; Service</h1>
 </div>
-<h2>Associate Editor</h2>
+<h2>Associate Editor / Editorial Board</h2>
 <ul>
+<li><p>Elsevier Signal Processing: Image Communication (IF: 3.4)<br />
+Associate Editor, 2024 - now</p>
+</li>
 <li><p>Elsevier Displays (IF: 4.3)<br />
 Associate Editor, 2021 - now</p>
 </li>
 <li><p>Human-centric Computing and Information Sciences (HCIS) (IF: 6.6)<br />
 Associate Editor, 2022 - now</p>
+</li>
+<li><p>PLOS One (IF 3.7)<br />
+Editorial Board Member, 2024 - now</p>
+</li>
+<li><p>Scientific Report (IF 3.8)<br />
+Editorial Board Member, 2024 - now</p>
+</li>
+<li><p>CAAI Artificial Intelligence Research<br />
+Young Editorial Board Member, 2024 - now</p>
 </li>
 </ul>
 <h2>Guest Editor</h2>
@@ -55,6 +67,10 @@ Special Section “<a href="https://ieeeaccess.ieee.org/closed-special-sections/
 </ul>
 <h2>Grand Challenge Organizer</h2>
 <ul>
+<li><p><a href="https://codalab.lisn.upsaclay.fr/competitions/17627">NTIRE 2024 Quality Assessment for AI-Generated Content - Track 1 Image (in conjunction with CVPR 2024)</a></p>
+</li>
+<li><p><a href="https://codalab.lisn.upsaclay.fr/competitions/17621">NTIRE 2024 Quality Assessment for AI-Generated Content - Track 2 Video (in conjunction with CVPR 2024)</a></p>
+</li>
 <li><p><a href="https://codalab.lisn.upsaclay.fr/competitions/10252">NTIRE 2023 Quality Assessment of Video Enhancement Challenge (in conjunction with CVPR 2023)</a></p>
 </li>
 <li><p><a href="https://qa4camera.github.io/">IEEE ICME 2020 Grand Challenge on QA4Camera: Quality Assessment for Smartphone Cameras</a></p>
@@ -163,7 +179,7 @@ Special Section “<a href="https://ieeeaccess.ieee.org/closed-special-sections/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-10 15:39:51 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-23 10:42:24 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
