--- a/award.html
+++ b/award.html
@@ -27,6 +27,18 @@
 <h1>Xiongkuo Min &ndash; Award &amp; Honor</h1>
 </div>
 <ul>
+<li><p>2024, Best Paper Nomination of ACM Multimedia</p>
+</li>
+<li><p>2024, The 1st Place Award of the ECCV AIM 2024 Challenge on UHD Blind Photo Quality Assessment</p>
+</li>
+<li><p>2024, The Second Prize of Undergraduate Electronic Design Contest</p>
+</li>
+<li><p>2024, Winner Award of the IEEE/CVF CVPR NTIRE 2024 Challenge on Short-form UGC Video Quality Assessment</p>
+</li>
+<li><p>2024, IEEE VSPC-TC (The Visual Signal Processing and Communications Technical Committee) Best Paper Award</p>
+</li>
+<li><p>2023, The First Prize of the Technological Invention Award of Chinese Institute of Electronics (CIE)</p>
+</li>
 <li><p>2023, The Winner Prize of the IEEE ICIP Point Cloud Visual Quality Assessment Grand Challenge</p>
 </li>
 <li><p>2023, IEEE MSA-TC (The Multimedia System and Applications Technical Committee) Best Paper Award - Honorable Mention</p>
@@ -72,7 +84,7 @@
 <p><tt>[<a href="award_cn.html">中文页面</a>]</tt></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-20 18:40:30 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-23 10:42:32 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
