--- a/award_cn.html
+++ b/award_cn.html
@@ -27,6 +27,18 @@
 <h1>Xiongkuo Min &ndash; Award &amp; Honor</h1>
 </div>
 <ul>
+<li><p>2024，ACM Multimedia最佳论文提名</p>
+</li>
+<li><p>2024，ECCV AIM超高清图像盲质量评价挑战赛冠军</p>
+</li>
+<li><p>2024，大学生电子设计竞赛（嵌入式）二等奖</p>
+</li>
+<li><p>2024，IEEE/CVF CVPR NTIRE用户生成短视频质量评价挑战赛冠军</p>
+</li>
+<li><p>2024，IEEE VSPC-TC最佳论文奖</p>
+</li>
+<li><p>2023，中国电子学会技术发明奖一等奖（排5）</p>
+</li>
 <li><p>2023，IEEE ICIP点云视觉质量评价挑战赛冠军</p>
 </li>
 <li><p>2023，IEEE MSA-TC最佳论文提名奖</p>
@@ -71,7 +83,7 @@
 <p><tt>[<a href="award.html">English Page</a>]</tt></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-20 18:40:35 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-23 10:42:38 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
