--- a/funding.html
+++ b/funding.html
@@ -32,31 +32,36 @@
 </li>
 <li><p>Natural Science Foundation of China: Young Scholar Program, Grant No. 61901260, Research Period: 2020-2022, PI</p>
 </li>
+<li><p>National Key Research and Development Program of China: Sub-task, Grant No. 2023YFB2906205, Research Period: 2023-2026, PI</p>
+</li>
 <li><p>Shanghai Pujiang Talent Program, Grant No. 22PJ1407400, Research Period: 2022-2024, PI</p>
 </li>
-<li><p>National Postdoctoral Program for Innovative Talents, Grant No. BX20180197, Research Period: 2018-2020, PI</p>
+<li><p>National Postdoctoral Program for Innovative Talents, Grant No. BX20180197, Research Period: 2018-2021, PI</p>
 </li>
-<li><p>China Postdoctoral Science Foundation: General Program, Grant No. 2019M651496, Research Period: 2018-2020, PI</p>
+<li><p>China Postdoctoral Science Foundation: General Program, Grant No. 2019M651496, Research Period: 2018-2021, PI</p>
 </li>
-<li><p>Shanghai Super-Postdoc Incentive Plan, Research Period: 2018-2020, PI</p>
+<li><p>Shanghai Super-Postdoc Incentive Plan, Research Period: 2018-2021, PI</p>
 </li>
 <li><p>Chinese Association for Artificial Intelligence-Huawei MindSpore Open Fund, Grant No. CAAIXSJLJJ-2022-006C, Research Period: 2022-2023, PI</p>
 </li>
 <li><p>China Computer Federation-Tencent Open Fund, Grant No. IAGR20220102, Research Period: 2022-2023, PI</p>
 </li>
-<li><p>Shanghai Jiao Tong University Explore X Fund, Research Period: 2023-2025, PI</p>
+<li><p>Shanghai Jiao Tong University Medical-Engineering Interdisciplinary Research Fund: Key Program, Research Period: 2024-2026, PI</p>
+</li>
+<li><p>Huawei - Shanghai Jiao Tong University Explore X Fund, Research Period: 2023-2025, PI</p>
 </li>
 <li><p>Shanghai Jiao Tong University Start-up Research Fund, Research Period: 2021-2024, PI</p>
 </li>
 <li><p>Tencent Technical Project, Research Period: 2022-2023, PI</p>
 </li>
-<li><p>Taobao-SJTU Joint Lab Technical Project, Research Period: 2022-2023, PI</p>
+<li><p>INTSIG Technical Project, Research Period: 2024-2025, PI
+</p>
 </li>
 </ul>
 <p><tt>[<a href="funding_cn.html">中文页面</a>]</tt></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-10 15:39:23 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-23 10:42:56 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
