--- a/funding_cn.html
+++ b/funding_cn.html
@@ -32,31 +32,36 @@
 </li>
 <li><p>国家自然科学基金青年项目，项目号：61901260，执行期：2020-2022，主持</p>
 </li>
+<li><p>国家重点研发计划子课题，项目号：2023YFB2906205，执行期：2023-2026，主持</p>
+</li>
 <li><p>上海市浦江人才计划，项目号：22PJ1407400，执行期：2022-2024，主持</p>
 </li>
-<li><p>博士后创新人才支持计划，项目号：BX20180197，执行期：2018-2020，主持</p>
+<li><p>博士后创新人才支持计划，项目号：BX20180197，执行期：2018-2021，主持</p>
 </li>
-<li><p>中国博士后科学基金面上项目，项目号：2019M651496，执行期：2018-2020，主持</p>
+<li><p>中国博士后科学基金面上项目，项目号：2019M651496，执行期：2018-2021，主持</p>
 </li>
-<li><p>上海市超级博士后激励计划，执行期：2018-2020，主持</p>
+<li><p>上海市超级博士后激励计划，执行期：2018-2021，主持</p>
 </li>
 <li><p>中国人工智能学会-华为MindSpore学术奖励基金，项目号：CAAIXSJLJJ-2022-006C，执行期：2022-2023，主持</p>
 </li>
 <li><p>中国计算机学会-腾讯犀牛鸟基金，项目号：IAGR20220102，执行期：2022-2023，主持</p>
 </li>
-<li><p>上海交通大学Explore X基金，执行期：2023-2025，主持</p>
+<li><p>上海交通大学医工交叉基金重点，执行期：2024-2026，主持</p>
+</li>
+<li><p>华为-上海交通大学Explore X基金，执行期：2023-2025，主持</p>
 </li>
 <li><p>上海交通大学新进教师启动基金，执行期：2021-2024，主持</p>
 </li>
-<li><p>腾讯科技有限公司企业委托项目，执行期：2022-2023，主持</p>
+<li><p>腾讯科技有限公司委托项目，执行期：2022-2023，主持</p>
 </li>
-<li><p>淘宝软件有限公司联合实验室项目，执行期：2022-2023，主持</p>
+<li><p>合合信息科技股份有限公司委托项目，执行期：2022-2023，主持
+</p>
 </li>
 </ul>
 <p><tt>[<a href="funding.html">English Page</a>]</tt></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-10 15:39:29 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-23 10:43:00 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
