--- a/group.html
+++ b/group.html
@@ -52,16 +52,24 @@ Research interest: Visual attention<br />
 Info: yinansun@sjtu.edu.cn</p>
 </li>
 <li><p><b>Ziheng Jia</b> (2023 - now)<br />
-Research interest: Streaming QoE<br />
+Research interest: LMM-based VQA<br />
 Info: jzhws1@sjtu.edu.cn</p>
+</li>
+<li><p><b>Zeyu Zhang</b> (2023 - now)<br />
+Research interest: Image quality assessment<br />
+Info: zeyuzhang@sjtu.edu.cn</p>
+</li>
+<li><p><b>Fan Huang</b> (2024 - now)<br />
+Research interest: Audio quality assessment<br />
+Info: huangfan@sjtu.edu.cn</p>
+</li>
+<li><p><b>Jiarui Wang</b> (2024 - now)<br />
+Research interest: AIGC quality assessment<br />
+Info: wangjiarui@sjtu.edu.cn</p>
 </li>
 </ul>
 <h2>M.S. Student </h2>
 <ul>
-<li><p><b>Fan Huang</b> (2022 - now)<br />
-Research interest: Audio quality assessment<br />
-Info: huangfan@sjtu.edu.cn</p>
-</li>
 <li><p><b>Yiming Shi</b> (2023 - now)<br />
 Research interest: Image processing and evaluation<br />
 Info: shiyiming1201@sjtu.edu.cn</p>
@@ -74,16 +82,13 @@ Info: dpei29@sjtu.edu.cn</p>
 Research interest: Neurology-based QoE<br />
 Info: gr.liu@sjtu.edu.cn</p>
 </li>
-</ul>
-<h2>Undergraduate Student </h2>
-<ul>
-<li><p><b>Jiarui Wang</b> (2022 - now)<br />
-Research interest: AIGC quality assessment<br />
-Info: wangjiarui@sjtu.edu.cn</p>
+<li><p><b>Linhan Cao</b> (2024 - now)<br />
+Research interest: Video quality assessment<br />
+Info: caolinhan@sjtu.edu.cn</p>
 </li>
-<li><p><b>Libo Zhu</b> (2023 - now)<br />
-Research interest: Neurology-based QoE<br />
-Info: 2814436848-zlb@sjtu.edu.cn</p>
+<li><p><b>Zhichao Ma</b> (2024 - now)<br />
+Research interest: Image quality assessment<br />
+Info: august1@sjtu.edu.cn</p>
 </li>
 </ul>
 <h2>Close Colleague/Student <a href="https://multimedia.sjtu.edu.cn/">@ SJTU Multimedia Lab</a></h2>
@@ -99,44 +104,48 @@ Postdoc at SJTU Multimedia Lab<br />
 Info: <a href="https://scholar.google.com/citations?user=nDlEBJ8AAAAJ&amp;hl=en">Google Scholar</a>, <a href="https://github.com/sunwei925">Github</a></p>
 </li>
 <li><p><b>Huiyu Duan</b><br />
-
 Postdoc at SJTU Multimedia Lab<br />
 Info: <a href="https://duanhuiyu.github.io/">Homepage</a>, <a href="https://scholar.google.com/citations?user=r0bRaCMAAAAJ&amp;hl=en">Google Scholar</a>, <a href="https://github.com/DuanHuiyu">Github</a></p>
 </li>
 <li><p><b>Yuan Tian</b><br />
-
 Postdoc at SJTU Multimedia Lab<br />
 Info: <a href="https://scholar.google.com/citations?user=Kzd0qtsAAAAJ&amp;hl=zh-CN">Google Scholar</a>, <a href="https://github.com/tianyuan168326">Github</a></p>
 </li>
-<li><p><b>Danyang Tu</b><br />
-
-Ph.D. student at SJTU Multimedia Lab<br />
-Info: <a href="https://www.researchgate.net/profile/Danyang-Tu">ResearchGate</a></p>
-</li>
 <li><p><b>Jun Jia</b><br />
+Postdoc at SJTU Multimedia Lab<br />
+Info: <a href="https://www.researchgate.net/scientific-contributions/Jun-Jia-2160973693">ResearchGate</a>
 
-Ph.D. student at SJTU Multimedia Lab<br />
-Info: <a href="https://www.researchgate.net/scientific-contributions/Jun-Jia-2160973693">ResearchGate</a></p>
+
+</p>
 </li>
 <li><p><b>Kaiwei Zhang</b><br />
-
 Ph.D. student at SJTU Multimedia Lab<br />
 Info: <a href="https://www.researchgate.net/profile/Kaiwei-Zhang-2">ResearchGate</a></p>
 </li>
 <li><p><b>Zicheng Zhang</b><br />
-
 Ph.D. student at SJTU Multimedia Lab<br />
 Info: <a href="https://zzc-1998.github.io/">Homepage</a>, <a href="https://scholar.google.com/citations?hl=en&amp;user=QICTEckAAAAJ">Google Scholar</a>, <a href="https://github.com/zzc-1998">Github</a></p>
 </li>
+<li><p><b>Zhichao Zhang</b><br />
+Ph.D. student at SJTU Multimedia Lab<br />
+Info: <a href="https://scholar.google.com/citations?user=a7U9TvIAAAAJ&amp;hl=zh-CN">Google Scholar</a></p>
+</li>
 <li><p><b>Chunyi Li</b><br />
-
 Ph.D. student at SJTU Multimedia Lab<br />
 Info: <a href="https://lcysyzxdxc.github.io/">Homepage</a>, <a href="https://scholar.google.com/citations?user=WosRriMAAAAJ&amp;hl=en">Google Scholar</a>, <a href="https://github.com/lcysyzxdxc">Github</a></p>
+</li>
+<li><p><b>Yingjie Zhou</b><br />
+Ph.D. student at SJTU Multimedia Lab<br />
+Info: <a href="https://scholar.google.com/citations?user=85yWgIcAAAAJ&amp;hl=en&amp;oi=ao">Google Scholar</a></p>
+</li>
+<li><p><b>Zijian Chen</b><br />
+Ph.D. student at SJTU Multimedia Lab<br />
+Info: <a href="https://scholar.google.com/citations?hl=en&amp;user=NSR4UkMAAAAJ">Google Scholar</a></p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-10 15:40:08 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-23 10:43:09 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
