--- a/patent.html
+++ b/patent.html
@@ -28,6 +28,12 @@
 </div>
 <h2>Granted Chinese Patent </h2>
 <ol>
+<li><p>Guangtao Zhai, Yiwei Yang, Yucheng Zhu, <b>Xiongkuo Min</b>, Dandan Zhu, &ldquo;Fully Convolutional Graph Neural Network Based Panoramic Image Saliency Prediction Method and Device&rdquo;, Chinese Invention Patent, ZL202111230705.9, 2024-11-01.</p>
+</li>
+<li><p>Guangtao Zhai, Jiahe Zhang, <b>Xiongkuo Min</b>, Wenhan Zhu, Xiaokang Yang, &ldquo;A Neural Network Based Method, System, and Terminal for Image Haze Density Estimation&rdquo;, Chinese Invention Patent, ZL202010171560.9, 2024-02-27.</p>
+</li>
+<li><p><b>Xiongkuo Min</b>, Yixuan Gao, Wenhan Zhu, Sijin Wu, Yuqin Cao, Guangtao Zhai, &ldquo;Prediction Method, System, Terminal, and Media for Image Quality Score Distribution&rdquo;, Chinese Invention Patent, ZL202110829971.7, 2024-02-20.</p>
+</li>
 <li><p>Guangtao Zhai, Sijin Wu, Huiyu Duan, <b>Xiongkuo Min</b>, Yixuan Gao, Yuqin Cao, &ldquo;Deep Learning-Based Image Enhancement Methods, Equipment and Medium for Visual Impairment Assistance&rdquo;, Chinese Invention Patent, ZL202110829947.3, 2023-10-27.</p>
 </li>
 <li><p><b>Xiongkuo Min</b>, Guangtao Zhai, Xiaokang Yang, &ldquo;A Full Reference Audio Quality Assessment Method and Device&rdquo;, Chinese Invention Patent, ZL202010171569.X, 2023-05-23.</p>
@@ -68,7 +74,7 @@
 <p><tt>[<a href="patent_cn.html">中文页面</a>]</tt></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-20 18:43:22 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-23 10:43:22 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
