--- a/research.html
+++ b/research.html
@@ -41,6 +41,14 @@
 </li>
 </ul>
 <ul>
+<li><p>Artificial Intelligence Generated Content</p>
+</li>
+</ul>
+<ul>
+<li><p>Large Multimodal Model</p>
+</li>
+</ul>
+<ul>
 <li><p>Multimodal Information Fusion</p>
 </li>
 </ul>
@@ -58,7 +66,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-10 15:38:57 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-23 10:43:44 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
