--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@ minxiongkuo@sjtu.edu.cn<br />
 </li>
 <li><p>Visual enhancement and restoration</p>
 </li>
+<li><p>Artificial intelligence generated content</p>
+</li>
+<li><p>Large multimodal model</p>
+</li>
 <li><p>Multimodal information fusion</p>
 </li>
 <li><p>VR/AR/XR and metaverse</p>
@@ -68,9 +72,21 @@ minxiongkuo@sjtu.edu.cn<br />
 </div></div>
 <h2>News</h2>
 <ul>
+<li><p>10/2024, Our paper accepted to ACM Multimedia 2024 is selected as Best Paper Nominations</p>
+</li>
+<li><p>09/2024, We receive the 1st Place Award of the ECCV AIM 2024 Challenge on UHD Blind Photo Quality Assessment</p>
+</li>
+<li><p>07/2024, Undergraduate from our group wins the Second Prize of Undergraduate Electronic Design Contest</p>
+</li>
+<li><p>06/2024, We receive the Winner Award of the IEEE/CVF CVPR NTIRE 2024 Challenge on Short-form UGC Video Quality Assessment</p>
+</li>
+<li><p>05/2024, We receive the IEEE CASS VSPC-TC Best Paper Award</p>
+</li>
+<li><p>03/2024, We receive the First Prize of the Technological Invention Award of CIE (中国电子学会技术发明一等奖)</p>
+</li>
 <li><p>10/2023, We receive the Winner Prize of the IEEE ICIP Point Cloud Visual Quality Assessment Grand Challenge</p>
 </li>
-<li><p>07/2023, We receive the IEEE MSA-TC Best Paper Award - Honorable Mention</p>
+<li><p>07/2023, We receive the IEEE CASS MSA-TC Best Paper Award - Honorable Mention</p>
 </li>
 <li><p>06/2023, Undergraduate from our group wins the Best Bachelor Thesis Award of SJTU (Top 1%)</p>
 </li>
@@ -116,6 +132,12 @@ minxiongkuo@sjtu.edu.cn<br />
 <h2>Selected Publications</h2>
 <p>More on <a href="publication.html">Publication</a> page.<br /></p>
 <ul>
+<li><p><b>Perceptual Video Quality Assessment: A Survey</b><br />
+Xiongkuo Min, Huiyu Duan, Wei Sun, Yucheng Zhu, and Guangtao Zhai<br />
+<i>SCIENCE CHINA Information Sciences</i>, vol. 67, no. 11, pp. 211301:1–211301:57, 2024.</p>
+</li>
+</ul>
+<ul>
 <li><p><b>Screen Content Quality Assessment: Overview, Benchmark, and Beyond</b><br />
 Xiongkuo Min, Ke Gu, Guangtao Zhai, Xiaokang Yang, Wenjun Zhang, Patrick Le Callet, and Chang Wen Chen<br />
 <i>ACM Computing Surveys (CSUR)</i>, vol. 54, no. 9, pp. 1-36, 2022.
@@ -134,14 +156,14 @@ Xiongkuo Min, Guangtao Zhai, Jiantao Zhou, Mylene C.Q. Farias, and Alan Conrad B
 <li><p><b>A Multimodal Saliency Model for Videos With High Audio-Visual Correspondence</b><br />
 Xiongkuo Min, Guangtao Zhai, Jiantao Zhou, Xiao-Ping Zhang, Xiaokang Yang, and Xinping Guan<br />
 <i>IEEE Transactions on Image Processing (TIP)</i>, vol. 29, pp. 3805-3819, 2020.<br />
-[<a href="https://mega.nz/file/xVsDTKQQ#KoWypaLYk2D5Q7xuAt_du5j4v_osfLNjGdbPWfZ427c">Code</a>]
-[<a href="https://mega.nz/file/IAcRhSJZ#PKqkGbO96C1zxbEFj1WgJ5WOdnnQzxLionjV0SV-5Xw">AVA Database</a>]</p>
+[<a href="https://terabox.com/s/17TXUs1P5FzvqFqT5cEZ2qQ">Code</a>]
+[<a href="https://terabox.com/s/1iONvcUc8b9pO6LfKGDn_vQ">AVA Database</a>]</p>
 </li>
 </ul>
 <ul>
 <li><p><b>Perceptual Image Quality Assessment: A Survey</b><br />
 Guangtao Zhai, and Xiongkuo Min<br />
-<i>SCIENCE CHINA Information Sciences</i>, vol. 63, no. 11, pp. 211301, 2020.
+<i>SCIENCE CHINA Information Sciences</i>, vol. 63, no. 11, pp. 211301:1–211301:52, 2020.
 <br /><font color=red size=+0.00>Hot Paper Award</font>, <font color=red size=+0.00>ESI Highly Cited Paper</font></p>
 </li>
 </ul>
@@ -157,7 +179,8 @@ Xiongkuo Min, Ke Gu, Guangtao Zhai, Jing Liu, Xiaokang Yang, and Chang Wen Chen<
 <li><p><b>Blind Image Quality Estimation via Distortion Aggravation</b><br />
 Xiongkuo Min, Guangtao Zhai, Ke Gu, Yutao Liu, and Xiaokang Yang<br />
 <i>IEEE Transactions on Broadcasting (TBC)</i>, vol. 64, no. 2, pp. 508-517, 2018.<br />
-[<a href="https://drive.google.com/open?id=1C_NxTLvnBOJDGhqqtixCkra0LIMP6loF">Code: BMPRI</a>]</p>
+[<a href="https://drive.google.com/open?id=1C_NxTLvnBOJDGhqqtixCkra0LIMP6loF">Code: BMPRI</a>]
+<br /><font color=red size=+0.00>ESI Highly Cited Paper</font></p>
 </li>
 </ul>
 <ul>
@@ -166,8 +189,8 @@ Xiongkuo Min, Kede Ma, Ke Gu, Guangtao Zhai, Zhou Wang, and Weisi Lin<br />
 <i>IEEE Transactions on Image Processing (TIP)</i>, vol. 26, no. 11, pp. 5462-5474, 2017.<br />
 [<a href="https://sites.google.com/site/minxiongkuo/uca?authuser=0">Project</a>]
 [<a href="https://drive.google.com/open?id=0BzIV-pviJ97tQTJ1QzR6U3VJTFE">Code: UCA</a>]
-[<a href="https://mega.nz/file/xUtWAZLb#YIpqVOs3swZE6fxK5iupIQeA1hBwAVoZE40_hDttrV4">Database: CCT</a>]
-<br /><font color=red size=+0.00>ESI Hot Paper</font></p>
+[<a href="https://terabox.com/s/17BeOiflG8vtU3OtT20briA">Database: CCT</a>]
+<br /><font color=red size=+0.00>ESI Hot Paper</font>, <font color=red size=+0.00>ESI Highly Cited Paper</font></p>
 </li>
 </ul>
 <h2>Featured Research</h2>
@@ -175,7 +198,10 @@ Xiongkuo Min, Kede Ma, Ke Gu, Guangtao Zhai, Zhou Wang, and Weisi Lin<br />
 <img src="images/Survey.jpg" alt="photo" width="300px" height="180px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Surveys for Perceptual Quality Assessment</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p></p>
-<p>- <b>[SCIS]</b> Perceptual Image Quality Assessment: A Survey<br />
+<p>- <b>[SCIS]</b> Perceptual Video Quality Assessment: A Survey<br />
+X. Min, H. Duan, W. Sun, Y. Zhu and G. Zhai, <i>SCIENCE CHINA Information Sciences</i>, vol. 67, no. 11, pp. 211301:1–211301:57, 2024.</p>
+<p><p style="margin-top: -0.5em"></p>
+- <b>[SCIS]</b> Perceptual Image Quality Assessment: A Survey<br />
 G. Zhai, and X. Min, <i>SCIENCE CHINA Information Sciences</i>, vol. 63, no. 11, pp. 211301, 2020.
 <br /><font color=red size=+0.00>Hot Paper Award</font>, <font color=red size=+0.00>ESI Highly Cited Paper</font></p>
 <p><p style="margin-top: -0.5em"></p>
@@ -489,7 +515,7 @@ Web: <a href="https://minxiongkuo.github.io/">https://minxiongkuo.github.io/</a>
 Email: minxiongkuo@sjtu.edu.cn OR minxiongkuo@gmail.com<br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-23 10:28:57 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-23 10:42:16 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
