--- a/teaching.html
+++ b/teaching.html
@@ -30,20 +30,20 @@
 <ul>
 <li><p><b>CS3324 - Digital Image Processing</b><br />
 Instructor: Prof. Guangtao Zhai and Assoc. Prof. Xiongkuo Min<br />
-2023 Fall
+2023 Fall, 2024 Fall
 </p>
 </li>
 </ul>
 <ul>
 <li><p><b>ICE6205 - Intelligent Video Analysis</b><br />
 Instructor: Assoc. Prof. Xiongkuo Min<br />
-2023 Spring, 2024 Spring<br />
+2023 Spring, 2024 Spring, 2025 Spring<br />
 </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-10 15:39:59 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-23 10:43:55 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
